apps/site/web/static/css/_schedule-v2.scss
/* ... */
.commuter-status {
  @include first-column;
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// FREQUENCY TABLE
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.schedule-v2-frequency-time {
  font-size: $font-size-sm;
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// TRIP INFO
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// VEHICLE LOCATION GRAPHIC
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////


.vehicle-location {
  @include unpadded-column;
  height: 100%;
  padding: $vertical-padding 0;
  position: absolute;
  width: $icon-size;

  &::before {
    border-left-style: solid;
    border-left-width: $location-line-width;
    content: '';
    height: 130%;
    left: 50%;
    position: absolute;
    top: -25%;
    z-index: $z-index-vehicle-position;
  }

  svg {
    margin-top: -$vertical-padding;
    overflow: visible;
    position: absolute;
    z-index: $z-index-vehicle-position;
  }
}

// "Show all stops" row -- dotted lines
.collapsed-row {
  .vehicle-location {
    &::before {
      background: $white;
      border-left-style: dotted;
      // taller and adjusted up so it moves up towards the previous stop
      height: 150%;
      top: -$space-16 - $space-4;
    }
  }

  .expand-link {
    @extend %stop-name-and-time-column;
    // add spacing between link and the next stop
    margin-bottom: $base-spacing;
  }
}

// first stop in the list, only display the line going down
.stop-group:first-child .schedule-trip-stop:first-child,
.schedule-v2-timetable-row:nth-child(2) {
  .vehicle-location::before {
    height: 100%;
    top: 0;
  }
}
// the last stop in the list, don't display the line
.stop-group:last-child .schedule-trip-stop:last-child,
.schedule-v2-timetable-row:last-child {
  .vehicle-location::before {
    display: none;
  }

  .stop-info {
    border-bottom: 0;
  }
}

.stop-info-column {
  min-width: 8rem;
  white-space: nowrap;
}

@include vehicle-location-mode-color(".commuter-rail", $brand-commuter-rail);
@include vehicle-location-mode-color(".red-line", $brand-red-line);
@include vehicle-location-mode-color(".blue-line", $brand-blue-line);
@include vehicle-location-mode-color(".orange-line", $brand-orange-line);
@include vehicle-location-mode-color(".green-line", $brand-green-line);
@include vehicle-location-mode-color(".bus", $brand-bus);
@include vehicle-location-mode-color(".ferry", $brand-ferry);


%trip-stop {
  @extend %unpadded-table-row;
  background-color: transparent;
  border-bottom: 0;
  border-top: 0;
  position: relative;

  .stop-info {
    @extend %stop-name-and-time-column;
    border-bottom: 1px solid $gray-lightest;
    padding-bottom: $base-spacing;
  }
}

%stop-name-column {
  float: left;
  width: 50%;
}

%stop-time-column {
  float: left;
  width: 50%;
}

%stop-name-and-time-column {
  @include unpadded-column;
  display: table-cell;
  margin-left: $base-spacing + $icon-size;
  width: grid-width(10);

  > span:first-child {
    @extend %stop-name-column;
  }

  > span:last-child {
    @extend %stop-time-column;
  }
}

// trip info parent container
.schedule-trip-info {
  @include make-row();

  @include media-breakpoint-up(md) {
    float: right;
    width: 50%;
  }
}

.schedule-trip-info-header {
  @extend %table-header;
  @extend %table-row;

  @include media-breakpoint-down(sm) {
    display: none;
  }
}

.schedule-trip-stop,
.collapsed-row {
  @extend %trip-stop;
}

.route-status,
.trip-duration {
  @extend %table-row;
}

.trip-info-labels {
  @extend %unpadded-table-row;
  border-bottom-width: 0;
  font-weight: bold;

  .vehicle-location::before {
    border-left-color: transparent;
    border-left-width: 0;
  }

  .stop-info {
    @extend %stop-name-and-time-column;

    @include media-breakpoint-down(xs) {
      display: none;
    }
  }
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// DATE AND DIRECTION FILTER BUTTONS
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

%schedule-filter-button-label {
  font-weight: bold;
  margin-bottom: $space-6;

  @include media-breakpoint-only(xs) {
    margin-bottom: $space-12;
  }
}

%schedule-filter-button {
  position: relative;

  @include media-breakpoint-up(sm) {
    float: left;
    margin-right: $horizontal-padding;
    width: 45%;
  }

  .filter-label {
    @extend %schedule-filter-button-label;
  }

  .filter-button {
    @extend %button-primary-outline;
    @extend %block-level-link;
    position: relative;
    text-align: left;
    width: 100%;
  }

  .inner-label {
    color: $gray-dark;
  }
}

.direction-filter,
.date-filter {
  @extend %schedule-filter-button;
}


////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// COMMUTER RAIL TIMETABLE
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.schedule-v2-timetable-container {
  max-width: 100%;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
}
/* ... */

